# sparql-update-data-generator

./: Cargo.toml  Dockerfile  README.md
src/: main.rs  sparql.rs  util.rs
src/rdf/: mod.rs  triple_generator.rs
src/rdf/triple_compressor/: compressor.rs  decompressor.rs  mod.rs
